@@ -9,11 +9,11 @@ jobs:
     strategy:
       matrix:
         python_version:
-        - '3.8'
         - '3.9'
         - '3.10'
         - '3.11'
         - '3.12'
+        - '3.13'
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
