@@ -3,11 +3,11 @@ skipsdist = True
 envlist =
     flake8
     isort
-    py38-django{40,41,42}
     py39-django{40,41,42}
-    py310-django{40,41,42,50}
-    py311-django{41,42,50}
-    py312-django{42,50}
+    py310-django{40,41,42,50,51}
+    py311-django{41,42,50,51}
+    py312-django{42,50,51}
+    py313-django{51}
 
 [testenv]
 setenv =
@@ -18,6 +18,7 @@ deps =
     django41: Django>=4.1,<4.2
     django42: Django>=4.2,<5.0
     django50: Django>=5.0,<5.1
+    django51: Django>=5.1,<5.2
 commands =
     python \
         -W error::DeprecationWarning \
@@ -33,19 +34,19 @@ changedir = docs
 deps =
     sphinx
     sphinx_rtd_theme
-    Django>=5.0,<5.1
+    Django>=5.1,<5.2
 commands =
     sphinx-build -W -b html -d build/doctrees . build/html
 
 [testenv:flake8]
 usedevelop = false
-basepython = python3.12
+basepython = python3.13
 deps = flake8
 commands = flake8 --ignore=E501,W504 djgeojson
 
 [testenv:isort]
 usedevelop = false
-basepython = python3.12
+basepython = python3.13
 deps = isort
 commands = isort .
 
